2008-04-08  Michael Albinus  <michael.albinus@gmx.de>

	* coding.c (detect_coding_emacs_mule)
	(Ffind_operation_coding_system): Fix typo.

2008-04-08  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (SNAME): Extract only symbol name.

	* w32font.h (struct w32_metric_cache): New struct.
	(w32font_info): Use it.
	(W32METRIC_NO_ATTEMPT, W32METRIC_SUCCESS, W32METRIC_FAIL)
	(CACHE_BLOCKSIZE): New constants.

	* w32font.c (Qja, Qko, Qzh): New symbols.
	(syms_of_w32font): Initialise them.
	(font_matches_spec): Use them to filter by language.
	(recompute_cached_metrics): Remove function.
	(compute_metrics, clear_cached_metrics): New functions.
	(w32font_encode_char): Use them to manage metric cache.
	(w32font_text_extents): Cache metrics for all glyphs on demand.
	Delay converting glyph indices to WORD until needed.
	(w32font_open_internal): Initialize metric cache to empty.
	(registry_to_w32_charset): Charset should always be a symbol.
	(fill_in_logfont, list_all_matching_fonts): Family should
	always be a symbol.

2008-04-06  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_shape): Increase items buffer size.
	Give up if glyph indices not supported.  Use uniscribe obtained
	ABC widths for individual metrics.  Map glyph clusters back to
	characters using fClusterStart flag.  Return number of glyphs
	produced, not chars processed.
	(uniscribe_shape): Map char at FROM to current glyph.

2008-04-05  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macmenu.c (fill_menu) [TARGET_API_MAC_CARBON]:
	Use SetMenuItemHierarchicalMenu.

2008-04-05  Jason Rumney  <jasonr@gnu.org>

	* image.c (pbm_load): Allow color values up to 65535.
	Throw an error if max_color_idx is outside the supported range.
	Report an error when image size is invalid.
	Read two bytes at a time when raw images have max_color_idx above 255.

2008-04-05  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (readdir): If FindFirstFile/FindNextFile return in